--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.12.2
+  json_serializable: ^3.5.1
+  build_runner: ^1.10.13
 
 
   # The following adds the Cupertino Icons font to your application.
